[FIX] html_editor: correct placeholder alignment
Before this commit:

- The placeholder remained aligned to the left side after pressing `enter`,
even when `text-align` was applied.

After this commit:

- The placeholder now aligns correctly, matching the text alignment.

task-4240792

Part-of: odoo/odoo#191746

--- a/addons/html_editor/static/src/main/hint.scss
+++ b/addons/html_editor/static/src/main/hint.scss
@@ -5,12 +5,12 @@
         content: attr(placeholder);
         position: absolute;
         top: 0;
-        left: var(--placeholder-left, 0);
+        left: var(--placeholder-left, 0px);
         display: block;
         color: inherit;
         opacity: 0.4;
         pointer-events: none;
         text-align: inherit;
-        width: calc(100% - var(--placeholder-left, 0));
+        width: calc(100% - var(--placeholder-left, 0px));
     }
 }
